# MARP-y-EDA

AVL_1/: AVL_1.cpp  AVL_1.vcxproj  AVL_1.vcxproj.filters
Arboles libres/: CaminosDFS.h  Multitarea.cpp  Multitarea.vcxproj  Multitarea.vcxproj.filters  datos.txt
EDA_2023/JuezEDA/: CMakeLists.txt  README.md
EDA_2023/JuezEDA/Tema1/: Anagramas.cpp  ComparandoListados.cpp  Dalton.cpp  DivisionVector.cpp  Rescate.cpp  Temperaturas.cpp
EDA_2023/JuezEDA/Tema2/: CurvaConcava.cpp  Diciembre2020.cpp  DigitosComplementarios.cpp  ElementoPerdido.cpp  ElementosBienSituados.cpp  Junio2022.cpp  MinimoVector.cpp  NumerosCaucasicos.cpp  ParcialmenteOrdenados.cpp  SoloUnImpar.cpp  SuficientementeDisperso.cpp  VectorParcialmenteOrdenado.cpp
EDA_2023/JuezEDA/Tema3/: CompraSemana.cpp  FormasSumar.cpp  LasNReinas.cpp  LucesNavidad.cpp  TorresDeColores.cpp  VariacionesConRepeticion.cpp  VariacionesSinRepeticion.cpp
EDA_2023/JuezEDA/Tema4/: NumerosFelices.cpp
EDA_2023/JuezEDA/Tema4/EvaluarPolinomio/: EvaluarPolinomio.cpp  Polinomio.h
EDA_2023/JuezEDA/Tema4/InclusionSet/: InclusionSet.cpp  Set.h
EDA_2023/JuezEDA/Tema4/NumerosMenores/: NumerosMenores.cpp  Set.h
EDA_2023/JuezEDA/Tema4/ProximoTren/: Horas.h  ProximoTren.cpp
EDA_2023/JuezEDA/Tema4/UnaTardeDeSabado/: Horas.h  Pelicula.h  UnaTardeDeSabado.cpp
EDA_2023/JuezEDA/Tema5/: AlumnoAfortunado.cpp  DecodificacionMensaje.cpp  EliminarAparicionesExterno.cpp  OrdenacionComplejidadLineal.cpp  ParentesisEquilibrados.cpp  ReordenarCola.cpp
EDA_2023/JuezEDA/Tema5/AdelantarSegmento/: AdelantarSegmento.cpp  list_eda.h
EDA_2023/JuezEDA/Tema5/ColaPepsiCola/: ColaPepsiCola.cpp  queue_eda.h
EDA_2023/JuezEDA/Tema5/CuelaCola/: CuelaCola.cpp
EDA_2023/JuezEDA/Tema5/DuplicarElementos/: DuplicarElementos.cpp  queue_eda.h
EDA_2023/JuezEDA/Tema5/EliminarApariciones/: EliminarApariciones.cpp  list_eda.h
EDA_2023/JuezEDA/Tema5/InvertirCola/: InvertirCola.cpp  queue_eda.h
EDA_2023/JuezEDA/Tema5/MezclarListasOrdenadas/: MezclarListasOrdenadas.cpp
EDA_2023/JuezEDA/Tema5/VueltaSegmento/: VueltaSegmento.cpp
EDA_2023/JuezEDA/Tema6/Aguaslimpias/: Aguaslimpias.cpp
EDA_2023/JuezEDA/Tema6/ArbolBinarioBusqueda/: ArbolBinarioBusqueda.cpp
EDA_2023/JuezEDA/Tema6/ArbolesGenealogicos/: ArbolesGenealogicos.cpp
EDA_2023/JuezEDA/Tema6/ArbolesZurdos/: ArbolesZurdos.cpp
EDA_2023/JuezEDA/Tema6/BarreraPrimos/: BarreraPrimos.cpp
EDA_2023/JuezEDA/Tema6/DiametroArbolBinario/: DiametroArbolBinario.cpp
EDA_2023/JuezEDA/Tema6/ElementoMinimo/: ElementoMinimo.cpp
EDA_2023/JuezEDA/Tema6/Frontera/: Frontera.cpp
EDA_2023/JuezEDA/Tema6/NodosHojasAltura/: NodosHojasAltura.cpp
EDA_2023/JuezEDA/Tema6/Singulares/: Singulares.cpp  bintree_eda.h
EDA_2023/JuezEDA/Tema7/: ActualizacionDiccionario.cpp  ReferenciasCruzadas.cpp
EDA_2023/JuezEDA/Tema7/ActorMasVisto/: ActorMasVisto.cpp
EDA_2023/JuezEDA/Tema8/: CarnetPorPuntos1.cpp  CarnetPorPuntos2.cpp  ConsultorioMedico.cpp  EleccionesSencillo.cpp
EDA_2023/JuezEDA/Tema8/VentaLibros/: VLClase.h  VentaLibros.cpp
La reina del super/: 2.Centinela.cpp
MARP_2024/AVL_1/: bintree.h
MARP_2024/Arboles libres/: Multitarea.cpp
MARP_2024/Atencion pacientes urgencia/: 2.Centinela.cpp
MARP_2024/UCM/: 2.Centinela.cpp
MARP_2024/kesimo/: 2.Centinela.cpp  AVL_1.vcxproj  AVL_1.vcxproj.filters  TreeSet_AVL.h
MARP_2024/lo que cuesta sumar/: 2.Centinela.cpp
Marp/: Marp.sln  hospitalet.cpp  supermercado.cpp
Marp/Amigos/: Amigos.cpp  Amigos.vcxproj  Amigos.vcxproj.filters
Marp/ArchipielagoBicicleta/: ArchipielagoBicicleta.cpp  ArchipielagoBicicleta.vcxproj  ArchipielagoBicicleta.vcxproj.filters
Marp/BatallaAudiencias/: BatallaAudiencias.cpp  BatallaAudiencias.vcxproj  BatallaAudiencias.vcxproj.filters
Marp/Camiones/: Camiones.cpp  Camiones.vcxproj  Camiones.vcxproj.filters  GrafoValorado.h
Marp/ConsoleApplication1/: BinTreeAVL.h  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
Marp/Grafos_1/: Grafos_1.cpp  Grafos_1.vcxproj  Grafos_1.vcxproj.filters  casos.txt
Marp/IsAVL/: Bintree.h  IsAVL.cpp  IsAVL.vcxproj  IsAVL.vcxproj.filters
Marp/KevinBacon/: KevinBacon.cpp  KevinBacon.vcxproj  KevinBacon.vcxproj.filters  casos.txt
Marp/LoQueCuestaSumar/: LoQueCuestaSumar.cpp  LoQueCuestaSumar.vcxproj
Multitarea/: Multitarea.cpp  Multitarea.vcxproj  Multitarea.vcxproj.filters
Orquesta/: Multitarea.cpp
Pajaros en vuelo/: 2.Centinela.cpp
UCM/: casos.txt
(+85 files in other folders)
