cmake_minimum_required(VERSION 3.23)
project(Juez)

set(CMAKE_CXX_STANDARD 17)

#TEMA 1 (ENTERO)
add_executable(Dalton Tema1/Dalton.cpp)
add_executable(Temperaturas Tema1/Temperaturas.cpp)
add_executable(DivisionVector Tema1/DivisionVector.cpp)
add_executable(Anagramas Tema1/Anagramas.cpp)
add_executable(Listados Tema1/ComparandoListados.cpp)
add_executable(Rescate Tema1/Rescate.cpp)
#TEMA 1

#TEMA 2
add_executable(Complementarios Tema2/DigitosComplementarios.cpp)
add_executable(SuficientementeDisperso Tema2/SuficientementeDisperso.cpp) #SIN ACABAR
add_executable(SoloUnImpar Tema2/SoloUnImpar.cpp)
add_executable(ElementosBienSituados Tema2/ElementosBienSituados.cpp)
add_executable(CurvaConcava Tema2/CurvaConcava.cpp)
add_executable(MinimoVector Tema2/MinimoVector.cpp)
add_executable(ElementoPerdido Tema2/ElementoPerdido.cpp)
add_executable(Junio2022 Tema2/Junio2022.cpp)
add_executable(Diciembre2020 Tema2/Diciembre2020.cpp) #SIN ACABAR
add_executable(VectorParcialmenteOrdenado Tema2/VectorParcialmenteOrdenado.cpp)
add_executable(NumerosCaucasicos Tema2/NumerosCaucasicos.cpp)
#TEMA 2

#TEMA 3
add_executable(VariacionesConRepeticion Tema3/VariacionesConRepeticion.cpp)
add_executable(VariacionesSinRepeticion Tema3/VariacionesSinRepeticion.cpp)
add_executable(LasNReinas  Tema3/LasNReinas.cpp)
add_executable(TorresDeColores Tema3/TorresDeColores.cpp)
add_executable(LucesNavidad Tema3/LucesNavidad.cpp)
add_executable(CompraSemana Tema3/CompraSemana.cpp)
add_executable(FormasSumar Tema3/FormasSumar.cpp)
#TEMA 3

#TEMA 4 (ENTERO)
add_executable(NumerosMenores Tema4/NumerosMenores/NumerosMenores.cpp)
add_executable(ProximoTren Tema4/ProximoTren/ProximoTren.cpp)
add_executable(EvaluarPolinomio Tema4/EvaluarPolinomio/EvaluarPolinomio.cpp)
add_executable(NumerosFelices Tema4/NumerosFelices.cpp)
add_executable(UnaTardeDeSabado Tema4/UnaTardeDeSabado/UnaTardeDeSabado.cpp)
add_executable(InclusionSet Tema4/InclusionSet/InclusionSet.cpp)
#TEMA 4

#TEMA 5
add_executable(DuplicarElementos Tema5/DuplicarElementos/DuplicarElementos.cpp)
add_executable(VueltaSegmento Tema5/VueltaSegmento/VueltaSegmento.cpp)
add_executable(ParentesisEquilibrados Tema5/ParentesisEquilibrados.cpp)
add_executable(ReordenarCola Tema5/ReordenarCola.cpp)
add_executable(InvertirCola Tema5/InvertirCola/InvertirCola.cpp)
add_executable(CuelaCola Tema5/CuelaCola/CuelaCola.cpp)
add_executable(ColaPepsiCola Tema5/ColaPepsiCola/ColaPepsiCola.cpp)
add_executable(DecodificarMensaje Tema5/DecodificacionMensaje.cpp) #SIN ACABAR
add_executable(MezclarListasOrdenadas Tema5/MezclarListasOrdenadas/MezclarListasOrdenadas.cpp)
add_executable(AlumnoAfortunado Tema5/AlumnoAfortunado.cpp)
add_executable(OrdenacionComplejidadLineal Tema5/OrdenacionComplejidadLineal.cpp)
add_executable(EliminarApariciones Tema5/EliminarApariciones/EliminarApariciones.cpp)
add_executable(EliminarAparicionesExterno Tema5/EliminarAparicionesExterno.cpp)
add_executable(AdelantarSegmento Tema5/AdelantarSegmento/AdelantarSegmento.cpp)
#TEMA 5

#TEMA 6
add_executable(Frontera Tema6/Frontera/Frontera.cpp)
add_executable(NodosHojasAltura Tema6/NodosHojasAltura/NodosHojasAltura.cpp)
add_executable(ArbolBinarioBusqueda Tema6/ArbolBinarioBusqueda/ArbolBinarioBusqueda.cpp)
add_executable(Singulares Tema6/Singulares/Singulares.cpp)
add_executable(ElementoMinimoArbol Tema6/ElementoMinimo/ElementoMinimo.cpp)
add_executable(BarreraPrimos Tema6/BarreraPrimos/BarreraPrimos.cpp)
add_executable(ArbolesGenealogicos Tema6/ArbolesGenealogicos/ArbolesGenealogicos.cpp)
add_executable(ArbolesZurdos Tema6/ArbolesZurdos/ArbolesZurdos.cpp)
add_executable(Aguaslimpias Tema6/Aguaslimpias/Aguaslimpias.cpp)
add_executable(DiametroArbolBinario Tema6/DiametroArbolBinario/DiametroArbolBinario.cpp) #SIN ACABAR
#TEMA 6

#TEMA 7
add_executable(ReferenciasCruzadas Tema7/ReferenciasCruzadas.cpp)
add_executable(ActualizacionDiccionario Tema7/ActualizacionDiccionario.cpp)
add_executable(ActorMasVisto Tema7/ActorMasVisto/ActorMasVisto.cpp)
#TEMA 7

#TEMA 8
add_executable(CarnetPorPuntos1 Tema8/CarnetPorPuntos1.cpp)
add_executable(ConsultorioMedico Tema8/ConsultorioMedico.cpp)
add_executable(EleccionesSencillo Tema8/EleccionesSencillo.cpp)
add_executable(CarnetPorPuntos2 Tema8/CarnetPorPuntos2.cpp)
add_executable(VentaLibros Tema8/VentaLibros/VentaLibros.cpp)
#TEMA 8
